# rust-terminal-forge

./: .dockerignore  .env.example  .gitignore  BUILD_STATUS_REPORT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  MEMORY.md  MOBILE_OPTIMIZATION_IMPLEMENTATION.md  README.md  RULES.md  SCREAMING_ARCHITECTURE_BLUEPRINT.md  SECURITY_AUDIT_REPORT.md  SECURITY_GUIDELINES.md  SECURITY_IMPLEMENTATION_REPORT.md  accessibility-report.json  bun.lockb  console-validation.js  debug-terminal-test.html  docker-compose.yml  generate_audio.scd  index.html  package-lock.json  package.json  persistent-pty-server.js  pty-server.js  pyproject.toml  start.sh  swarms_config.py  swarms_coordinator.py  tailwind.config.ts  test-claude-colors.sh  vite.config.production.ts  vite.config.ts  vitest.config.ts
.claude/: change-tracker.js  session-automation.json  session-refactor.sh  session-summary-20250721-171530.md
agent_workspace/: MEMORY.md
docs/: AI_COLLABORATION_GUIDE.md  AI_INTEGRATION.md  ARCHITECTURAL_PATTERNS.md  ARCHITECTURE.md  CONSOLIDATED_DOCS.md  DEVELOPER_ONBOARDING.md  LIMITATIONS.md  MAD_SCIENCE_README.md  MULTI_AI_ARCHITECTURE_SUMMARY.md  MULTI_AI_INTEGRATION_GUIDE.md  README.md  ROADMAP.md  RUNTIME_DEBUG_GUIDE.md  SERVER_ARCHITECTURE.md  SWARMS_INTEGRATION.md  TROUBLESHOOTING.md  VISUAL_DIFF_FRAMEWORK.md
mockups/: App.tsx
public/: manifest.json
scripts/: accessibility-validator.mjs  auto-repair.js  cross-platform-tester.js  final-debug-polish.js  mcp-validator.js  performance-benchmark.js  performance-monitor.js  performance-monitor.mjs  production-health-check.js  (+4 more)
(+197 files in other folders)
