[package]
name = "rust-terminal-forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "pty-server"
path = "src/pty_server.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
portable-pty = "0.8"
log = "0.4"
env_logger = "0.10"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs"] }
bytes = "1.0"
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }