[project]
name = "rust-terminal-forge"
version = "0.1.0"
description = "decouple our terminal from any provider"
authors = [
    {name = "Brandon A Calderon-Morales",email = "62074841+BA-CalderonMorales@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "swarms (>=8.0.0,<9.0.0)"
]
requires-python = ">=3.10,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
